Updated project description

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   <h1>
     Angular form generator
   </h1>  
+  <h5>Simply enter JSON object to get template driven or reactive form html and typescript source code</h5>
 </div>
 <div class="container mb-5">
   <form [formGroup]="generatorForm">
