--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,13 +11,13 @@
       <div class="col-md-8">
         <div class="form-group">
           <div class="custom-control custom-radio custom-control-inline">
-            <input type="radio" formControlName="formType" value="1" id="templateDriven" class="custom-control-input">
-            <label class="custom-control-label" for="templateDriven">Template Driven Forms</label>
-          </div>
-          <div class="custom-control custom-radio custom-control-inline">
             <input type="radio" formControlName="formType" value="2" id="reactive" class="custom-control-input">
             <label class="custom-control-label" for="reactive">Reactive Forms</label>
           </div>
+          <div class="custom-control custom-radio custom-control-inline">
+              <input type="radio" formControlName="formType" value="1" id="templateDriven" class="custom-control-input">
+              <label class="custom-control-label" for="templateDriven">Template Driven Forms</label>
+            </div>
         </div>
         <div class="form-group">
           <label for ="description"> Json Input {{gf.jsonInput.errors}}</label>
@@ -38,19 +38,19 @@
     
   </div>
 </div>
-<div class="container mb-5">
+<div class="container mb-5" #code>
   <div class="row">
       <div class="col-md-3">
           <h4>Html code</h4>
       </div>
       <div class="col-md-3">
-          <span class="float-right"> <span style="font-family: 'Courier New', Courier, monospace;">Copy</span><img height="25px" width="45px" (click)="copyCode(htmlcode)" src="../assets/copy.png" /></span>
+          <span class="float-right"> <span style="font-family: 'Courier New', Courier, monospace;" #copyhtml>Copy</span><img height="25px" width="45px" (click)="copyCode(htmlcode,copyhtml)" src="../assets/copy.png" /></span>
       </div>
       <div class="col-md-3">
           <h4>Typescript code</h4>
       </div>
       <div class="col-md-3">
-          <span class="float-right"> <span style="font-family: 'Courier New', Courier, monospace;">Copy</span> <img height="25px" width="45px" (click)="copyCode(tscode)" src="../assets/copy.png" /></span>
+          <span class="float-right"> <span style="font-family: 'Courier New', Courier, monospace;" #copyts>Copy</span> <img height="25px" width="45px" (click)="copyCode(tscode,copyts)" src="../assets/copy.png" /></span>
       </div>
   </div>
   <div class="row">
