Altered copy image path

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,13 +44,13 @@
           <h4>Html code</h4>
       </div>
       <div class="col-md-3">
-          <span class="float-right"> <span style="font-family: 'Courier New', Courier, monospace;" #copyhtml>Copy</span><img height="25px" width="45px" (click)="copyCode(htmlcode,copyhtml)" src="../assets/copy.png" /></span>
+          <span class="float-right"> <span style="font-family: 'Courier New', Courier, monospace;" #copyhtml>Copy</span><img height="25px" width="45px" (click)="copyCode(htmlcode,copyhtml)" src="assets/copy.png" /></span>
       </div>
       <div class="col-md-3">
           <h4>Typescript code</h4>
       </div>
       <div class="col-md-3">
-          <span class="float-right"> <span style="font-family: 'Courier New', Courier, monospace;" #copyts>Copy</span> <img height="25px" width="45px" (click)="copyCode(tscode,copyts)" src="../assets/copy.png" /></span>
+          <span class="float-right"> <span style="font-family: 'Courier New', Courier, monospace;" #copyts>Copy</span> <img height="25px" width="45px" (click)="copyCode(tscode,copyts)" src="assets/copy.png" /></span>
       </div>
   </div>
   <div class="row">
